feat: implement role-based access control (RBAC) for admin endpoints and update user roles